--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.1",
     "flowbite-react": "^0.10.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.7",
     "react": "19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "19.0.0",
     "swiper": "^11.2.4",
     "zod": "^3.24.1"
@@ -32,7 +34,6 @@
     "@types/node": "^20",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "drizzle-kit": "^0.19.1",
     "eslint": "^8",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
@@ -40,6 +41,7 @@
     "typescript": "^5"
   },
   "overrides": {
+    "esbuild": "^0.25.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4"
   }
