--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.1",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^12.4.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.7",
     "react": "19.0.0",
